--- a/src/app/components/pages/group-list/group-rights/group-rights.component.html
+++ b/src/app/components/pages/group-list/group-rights/group-rights.component.html
@@ -1,135 +1,187 @@
 <main id="main" class="main">
     <div class="pagetitle">
         <div>
-          <h3>Quản lý tài khoản</h3>
+          <h3>Quản lý nhóm quyền</h3>
           <nav>
             <ol class="breadcrumb">
               <li class="breadcrumb-item"><a href="index.html">Admin</a></li>
               <li class="breadcrumb-item">Quản lý</li>
-              <li class="breadcrumb-item active">Quản lý tài khoản</li>
+              <li class="breadcrumb-item active">Quản lý nhóm quyền</li>
             </ol>
           </nav>
         </div>
+
+        <div class="btn-add-wrapper">
+          <button
+          pButton
+          pRipple
+          label="Thêm mới"
+          style="height: 40px; width: 130px; border-radius: 10px;"
+          (click)="openDialog()"
+        ></button>
+        </div>
     </div>
 
-    <section class="section k-list-table">
-        <div class="row">
-            <div class="col-lg-12">
-              <div class="card-body">
-                <div class="row">
-                  <div class="col-lg-4 mt-3">
-                    <span class="p-input-icon-left" style="width: 100%">
-                      <i class="pi pi-search"></i>
-                      <input
-                        type="text"
-                        class="form-control"
-                        
-                        placeholder="Tìm kiếm theo tên, mã nhân viên"
-                        style="padding-left: 30px; height: 38px"
-                        
-                        #searchInput
-                      />
-                    </span>
-                  </div>
-                  <div class="col-lg-4 mt-3">
-                    <button
-                      pButton
-                      pRipple
-                      label="Lọc"
-                      class="buttonfilter"
-                      
-                    ></button>
-                  </div>
+    <div class="toast-container">
+      <p-messages
+        [(value)]="messages"
+        [enableService]="false"
+        [closable]="false"
+      ></p-messages>
+  </div>
+
+
+  <section class="section k-list-table">
+      <div class="row">
+          <div class="col-lg-12">
+            <div class="card-body">
+              <div class="row">
+                <div class="col-lg-4 mt-3">
+                  <span class="p-input-icon-left" style="width: 100%">
+                    <i class="pi pi-search"></i>
+                    <input
+                      type="text"
+                      class="form-control"
+                      (input)="onInput($event)"
+                      placeholder="Tìm kiếm theo tên nhóm quyền"
+                      style="padding-left: 30px; height: 38px"
+                      [(ngModel)]="selectedName"
+                      #searchInput
+                    />
+                  </span>
                 </div>
-                <div style="margin-top: 15px" class="card">
-                  <p-table
-                    [value]=""
-                    [paginator]="true"
-                    [rows]="pageSize"
-                    [totalRecords]="totalRecordsCount > 0 ? totalRecordsCount : 1"
-                    [paginator]="false"
-                    (onPage)="onPageChange($event)"
-                    styleClass="p-datatable-striped"
-                  >
-                    <ng-template pTemplate="header">
-                      <tr>
-                        <!-- <th style="width: 10%">
-                          <p-checkbox [binary]="true" inputId="binary"></p-checkbox>
-                        </th> -->
-                        <th style="width: 10%">Mã</th>
-                        <th style="width: 20%">Tên danh mục</th>
-                        <th style="width: 15%">Trực thuộc</th>
-                        <th style="width: 10%">Cấp</th>
-                        <th style="width: 10%">Người tạo</th>
-                        <th style="width: 10%">Trạng thái</th>
-                        <th>Ẩn/Hiện</th>
-                        <th style="width: 10%">Thao tác</th>
-                      </tr>
-                    </ng-template>
-                    <ng-template pTemplate="body" let-category>
-                      <tr>
-                        <!-- <td>
-                          <p-checkbox [binary]="true" inputId="binary"></p-checkbox>
-                        </td> -->
-                        <td>{{ category.id }}</td>
-                        <td>{{ category.name }}</td>
-                        <td>{{ category.parentName }}</td>
-                        <td>{{ category.level }}</td>
-                        <td>{{ category.crateName }}</td>
-                        <td [style.color]="category.status === 1 ? 'green' : 'red'">
-                          {{ category.status === 1 ? "Hoạt động" : "Ẩn" }}
-                        </td>
-                        <td>
-                          <p-inputSwitch
-                            name="switchControl"
-                            [ngModel]="category.status === 1 ? true : false"
-                            (ngModelChange)="
-                              updateStatus(category.id, $event ? 1 : 0)
-                            "
-                            [disabled]="true"
-                          ></p-inputSwitch>
-                        </td>
-                        <!-- <td class="text-center">
-                          <a (click)="editCategory(category.id)">
-                            <i
-                              class="pi pi-pencil"
-                              style="font-size: 1.2rem; text-align: center"
-                            ></i>
-                          </a>
-                        </td> -->
-                        <td>
-                          <div class="flex">
-                              <button
-                                  pButton
-                                  pRipple
-                                  icon="pi pi-pencil"
-                                  class="p-button-rounded p-button-success mr-2"
-                                  (click)="editCategory(category.id)"
-                              ></button>
-                              <button
-                                  pButton
-                                  pRipple
-                                  icon="pi pi-trash"
-                                  class="p-button-rounded p-button-warning"
-                                  (click)="deleteProduct(product)"
-                              ></button>
-                          </div>
+                <div class="col-lg-4 mt-3">
+                  <button
+                    pButton
+                    pRipple
+                    label="Lọc"
+                    class="buttonfilter"
+                    (click)="clickButtonFilter()"
+                  ></button>
+                </div>
+              </div>
+              <div style="margin-top: 15px" class="card">
+                <p-table
+                  [value]="roles"
+                  [rows]="this.pageSize"
+                  [totalRecords]="totalRecords"
+                  [paginator]="false"
+                  (onPage)="onPageChange($event)"
+                  [style]="{ width: '100%' }"
+                  styleClass="p-datatable-striped"
+                >
+                  <ng-template pTemplate="header">
+                    <tr>
+                      <th style="width: 1%; font-size: 14px;">STT</th>
+                      <th style="width: 10%">Tên nhóm quyền</th>
+                      <th style="width: 15%">Mô tả</th>
+                      <th style="width: 10%">Thao tác</th>
+                    </tr>
+                  </ng-template>
+                  <ng-template pTemplate="body" let-role let-i="rowIndex">
+                    <tr class="custom-table">
+                      <td style="font-size: 14px;">
+                        {{((this.pageIndex - 1) * this.pageSize) + (i + 1)}}</td>
+                      <td>{{ role.name }}</td>
+                      <td>{{ role.description }}</td>
+                      <td style="text-align: center; cursor: pointer; color: rgb(29, 88, 225);">
+                        <a>Xem chi tiết</a>
                       </td>
-                      </tr>
-                    </ng-template>
-                  </p-table>
-                  <div>
-                    <p-paginator
-                      [rows]="pageSize"
-                      (onPageChange)="onPageChange($event)"
-                      [totalRecords]="totalRecordsCount > 0 ? totalRecordsCount : 1"
-                      [rowsPerPageOptions]="[10, 20, 30]"
-                    ></p-paginator>
+                    </tr>
+                  </ng-template>
+                </p-table>
+                <div class="paging-bot dg-fix">
+                  <div class="paging-info">
+                    <div [innerHTML]="currentPageReport"></div>
                   </div>
+                  <p-paginator
+                          [rows]="this.pageSize"
+                          (onPageChange)="onPageChange($event)"
+                          [totalRecords]="totalRecords > 0 ? totalRecords : 1"
+                          [rowsPerPageOptions]="[10, 20, 30]"
+                          [first]="
+                            (this.pageIndex - 1) *
+                            this.pageSize
+                          "
+                  ></p-paginator>
                 </div>
               </div>
             </div>
-        </div>
+          </div>
+      </div>
 
-    </section>
+      <div class="dialog-background" *ngIf="showDialog">
+        <div class="dialog-container-customer">
+          <div class="card-body">
+            <div class="d-flex justify-content-between align-items-center">
+              <h5 style="font-weight: 600; font-size: 17px;" class="card-title">Thông tin cơ bản</h5>
+              <p-button icon="pi pi-times" [rounded]="true" [text]="true" severity="danger" [style]="{'border-radius': '25%'}" (click)="closeDialog()"></p-button>
+            </div>
+            <!-- General Form Elements -->
+            <form [formGroup]="RoleGroupForm" (ngSubmit)="onSubmit()">
+              <div class="row mb-12">
+                <div style="margin-bottom: 20px;" class="col-lg-12">
+                  <label class="labelip">Nhóm quyền<span class="red-asterisk">*</span></label>
+                  <p-multiSelect
+                    [style]="{ height: '40px', width: '100%' }"
+                    [options]="Roles"
+                    optionLabel="name"
+                    [showClear]="true"
+                    placeholder="Chọn nhóm quyền"
+                    [filter]="true"
+                    formControlName="permissionIds"
+                    (onBlur)="checkRolesSelection()"
+                  ></p-multiSelect>
+                  <div *ngIf="(rolesControl?.hasError('required') && rolesControl?.touched) || showNameError7" class="error-message">
+                    Vui lòng chọn ít nhất một nhóm quyền.
+                  </div>
+                </div>
+                <div style="margin-bottom: 20px;" class="col-lg-12">
+                  <label class="labelip"
+                  >Tên nhóm quyền<span class="red-asterisk">*</span></label>
+                    <input
+                      type="text"
+                      class="form-control"
+                      pInputText
+                      [style]="{ height: '40px', width: '100%' }"
+                      formControlName="name"
+                      placeholder="Nhập tài khoản"
+                      (input)="onInputChange($event)"
+                      required
+                    />
+                    <div
+                    *ngIf="
+                      (RoleGroupForm.get('name')?.invalid &&
+                        (RoleGroupForm.get('name')?.dirty ||
+                          RoleGroupForm.get('name')?.touched)) || showNameError3
+                    "
+                    >
+                    <div class="error-message" *ngIf="RoleGroupForm.controls['name'].hasError('whitespace')">
+                      {{ getErrorMessage3() }}
+                    </div>
+                    <div *ngIf="(emailControl.invalid && emailControl.touched && emailControl.value) || showNameError6" class="error-message">
+                      Vui lòng nhập đúng định dạng email.
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-12">
+                  <label class="labelip"
+                  >Mô tả</label>
+                  <p-editor formControlName="description" [style]="{ height: '200px' }"></p-editor>      
+                </div>
+              </div>
+              <div class="row mb-12 mt-5">
+                <div class="col-sm-12 buttonsl">
+                    <button pButton pRipple label="Hủy" class="p-button-success buttoncloses" type="button" (click)="closeDialog()"></button>
+                    <button pButton pRipple label="Thêm" class="p-button-success butttonsave" type="submit"></button>
+                </div>
+              </div>
+            </form><!-- End General Form Elements -->
+          </div>
+        </div>
+      </div>
+
+  </section>
+
+
 </main>
