--- a/src/app/components/pages/warranty/warranty-request/show/show.component.html
+++ b/src/app/components/pages/warranty/warranty-request/show/show.component.html
@@ -39,6 +39,8 @@
                 currentPageReportTemplate="{first} - {last} trong tổng {totalRecords} sản phẩm"
                 [(selection)]="selectedProducts"
                 selectionMode="multiple"
+                (onRowExpand)="onRowExpand($event)"
+                (onRowCollapse)="onRowCollapse($event)"
                 [rowHover]="true"
                 dataKey="id"
             >
